objects/myifedeliverie__c.object
<CustomObject>
    <fields>
        <fullName>ACTUAL_SHIP_DATE__c</fullName>
        <label>Actual Ship Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELIVERY_ID__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FREIGHT_CARRIER__c</fullName>
        <label>Freight Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_DESCRIPTION__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_NUMBER__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LINE_ID__c</fullName>
        <label>Initiate RMA Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPED_QUANTITY_UOM__c</fullName>
        <label>UMO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPED_QUANTITY__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SHIP_FROM__c</fullName>
        <label>Ship From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_LOCATION__c</fullName>
        <label>Ship To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAYBILL__c</fullName>
        <label>WayBill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEIGHT__c</fullName>
        <label>WEIGHT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>myIfeDeliverie</label>
    <nameField>
        <label>myIfeDeliverie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myIfeDeliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>